Ajouter les réseaux sociaux à la page contact
