# lib/db/src/schema/site_content.ts
@@ -46,6 +46,11 @@ export const siteContentTable = pgTable("site_content", {
   gainsPosterUrl: text("gains_poster_url").notNull().default(""),
   gainsSecondaryImageUrl: text("gains_secondary_image_url").notNull().default(""),
   telegramLink: text("telegram_link").notNull().default(""),
+  facebookLink: text("facebook_link").notNull().default(""),
+  tiktokLink: text("tiktok_link").notNull().default(""),
+  instagramLink: text("instagram_link").notNull().default(""),
+  youtubeLink: text("youtube_link").notNull().default(""),
+  whatsappChannelLink: text("whatsapp_channel_link").notNull().default(""),
   supportPhone1: text("support_phone1").notNull().default(""),
   supportPhone2: text("support_phone2").notNull().default(""),
   suggestionsIntroText: text("suggestions_intro_text").notNull().default("Faite nous parvenir vos suggestions, dans cette espace, vous pouvez nous faire parvenir vos suggestions afin que nous puissions résoudre efficacement certains problème que vous rencontrez et ensemble nous ferons évoluer notre communauté"),
